# alembic-drift-check

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
src/alembic_drift_check/: __init__.py  __main__.py  cli.py  core.py
tests/: conftest.py  fixture_models.py  test_async.py  test_cli.py  test_core.py
