[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alembic-drift-check"
version = "0.1.0"
description = "CI check + CLI that detects schema drift between your SQLAlchemy models and a live database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "async-workflows" }]
keywords = [
    "alembic",
    "sqlalchemy",
    "migrations",
    "schema-drift",
    "database",
    "ci",
    "autogenerate",
    "asyncio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: AsyncIO",
]
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "aiosqlite>=0.19",
]

[project.urls]
Homepage = "https://github.com/async-workflows/alembic-drift-check"
Documentation = "https://async-workflows.com"
Issues = "https://github.com/async-workflows/alembic-drift-check/issues"

[project.scripts]
alembic-drift-check = "alembic_drift_check.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alembic_drift_check"]
